-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9
-
Component/s: hotspot
-
Environment:
WhiteBox API
-
b40
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8083449 | emb-9 | Tobias Hartmann | P3 | Resolved | Fixed | master |
The whitebox get*VMFlag() methods fail with a java.lang.NullPointerException if a notproduct or develop flag is requested in a product build.
- backported by
-
JDK-8083449 Whitebox get*VMFlag() methods fail with develop flags in product builds
-
- Resolved
-
- blocks
-
JDK-8060479 [TESTBUG] compiler/codecache/CheckSegmentedCodeCache.java test fails with product build
-
- Resolved
-
- relates to
-
JDK-8038756 new WB API :: get/setVMFlag
-
- Resolved
-