8061443: Whitebox get*VMFlag() methods fail with develop flags in product builds

Changed 'get*VMFlag' to return all flags. Added methods 'isLockedVMFlag' and 'isConstantVMFlag' and adapted tests.

Reviewed-by: kvn, dholmes, sla